# ml-antiviral-diagnosis

./: .dockerignore  AGENTS.md  Makefile  README.md  docker-compose.yml  pyproject.toml
dataset/: Data_Dictionary.csv  model_table.csv  model_table_feature_engineered.csv  test_set.csv  training_set.csv
dataset/original_sheets/: Data_Dictionary.csv  Instructions.csv  dim_patient.csv  dim_physician.csv
docker/: Dockerfile  Dockerfile.ui
ml_antiviral_diagnosis/: __init__.py  api.py  de.py  eda.py  feature_engineering.py
models/: 20260321-004014_random_forest_classifier.joblib
notebooks/: de.ipynb  feature_engineering.ipynb  preprocessing.ipynb  training.ipynb
tests/: conftest.py  test_api.py  test_de.py  test_eda.py  test_feature_engineering.py
ui/: package-lock.json
ui/src/: App.css  App.tsx  index.css
